# yatpool

./: CMakeLists.txt  LICENSE  README.md  yatpoolConfig.cmake
examples/: Makefile  README.md  numerical_integration_serial.c  numerical_integration_threaded.c  writing_to_file_serial.c  writing_to_file_threaded.c
scripts/: build.sh  cleanup.sh  install.sh
src/: CMakeLists.txt  yatpool.c  yatpool.h
