file(GLOB_RECURSE SOURCE_FILES ${PROJECT_ROOT_DIR}/src/*.c)

add_library(${PROJECT_LIBRARY_NAME} STATIC ${SOURCE_FILES})

target_include_directories(${PROJECT_LIBRARY_NAME} PUBLIC
    $<BUILD_INTERFACE:${PROJECT_ROOT_DIR}/src>
    $<INSTALL_INTERFACE:include>
)
target_link_libraries(${PROJECT_LIBRARY_NAME} PRIVATE m pthread)
